package entity;

public enum Role {
    CLIENT,
    LIBRARIAN;
}
