package entity.book;

public enum BookType {
    NOVEL,
    JOURNAL,
    STUDY_BOOK,
    MAGAZINE,
}
